--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,43 @@
-flask== 1.0.2
-pyaml==18.11.0
+aniso8601==6.0.0
+asn1crypto==0.24.0
+astroid==2.2.5
+awscli==1.16.145
+botocore==1.12.135
+certifi==2019.3.9
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+colorama==0.3.9
+cryptography==2.6.1
+docutils==0.14
+Flask==1.0.2
+flask-marshmallow==0.10.0
+Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
+idna==2.8
+isort==4.3.17
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jmespath==0.9.4
+lazy-object-proxy==1.3.1
+MarkupSafe==1.1.1
+marshmallow==2.19.2
+marshmallow-sqlalchemy==0.16.2
+mccabe==0.6.1
+pyasn1==0.4.4
+pycparser==2.19
+pycrypto==2.6.1
+pylint==2.3.1
+pyOpenSSL==19.0.0
+PySocks==1.6.8
 python-dateutil==2.8.0
-SQLAlchemy==1.3.1
-flask_sqlalchemy==2.3.2
-pytest==4.0.1
-boto3==1.9.145
-scipy==1.2.1
-requests
-pymysql
-pandas
-csv
-BeautifulSoup
-openpyxl
+pytz==2019.1
+PyYAML==3.13
+requests==2.21.0
+rsa==3.4.2
+s3transfer==0.2.0
+six==1.12.0
+SQLAlchemy==1.3.3
+urllib3==1.24.1
+Werkzeug==0.15.2
+wrapt==1.11.1
