--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aniso8601==6.0.0
 asn1crypto==0.24.0
 astroid==2.2.5
 awscli==1.16.145
+boto3==1.9.134
 botocore==1.12.135
 certifi==2019.3.9
 cffi==1.12.3
@@ -24,10 +25,13 @@ MarkupSafe==1.1.1
 marshmallow==2.19.2
 marshmallow-sqlalchemy==0.16.2
 mccabe==0.6.1
+numpy==1.16.3
+pandas==0.24.2
 pyasn1==0.4.4
 pycparser==2.19
 pycrypto==2.6.1
 pylint==2.3.1
+PyMySQL==0.9.3
 pyOpenSSL==19.0.0
 PySocks==1.6.8
 python-dateutil==2.8.0
@@ -38,6 +42,12 @@ rsa==3.4.2
 s3transfer==0.2.0
 six==1.12.0
 SQLAlchemy==1.3.3
-urllib3==1.24.1
+typed-ast==1.3.5
+urllib3==1.24.2
 Werkzeug==0.15.2
 wrapt==1.11.1
+boto3==1.9.134
+numpy==1.16.3
+pandas==0.24.2
+PyMySQL==0.9.3
+typed-ast==1.3.5
