--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ pyOpenSSL==19.0.0
 PySocks==1.6.8
 python-dateutil==2.8.0
 pytz==2019.1
-PyYAML<=3.13,>=3.10
+PyYAML>=4.2b1
 requests==2.21.0
 rsa==3.4.2
 s3transfer==0.2.0
