--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ chardet==3.0.4
 Click==7.0
 colorama==0.3.9
 cryptography==2.6.1
+cycler==0.10.0
 docutils==0.14
 Flask==1.0.2
 flask-marshmallow==0.10.0
@@ -20,10 +21,13 @@ isort==4.3.17
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jmespath==0.9.4
+joblib==0.13.2
+kiwisolver==1.1.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 marshmallow==2.19.2
 marshmallow-sqlalchemy==0.16.2
+matplotlib==3.1.0
 mccabe==0.6.1
 numpy==1.16.3
 pandas==0.24.2
@@ -32,21 +36,20 @@ pycparser==2.19
 pylint==2.3.1
 PyMySQL==0.9.3
 pyOpenSSL==19.0.0
+pyparsing==2.4.0
 PySocks==1.6.8
 python-dateutil==2.8.0
 pytz==2019.1
-PyYAML>=4.2b1
+PyYAML==5.1.1
 requests==2.21.0
 rsa==3.4.2
 s3transfer==0.2.0
+scikit-learn==0.21.2
+scipy==1.3.0
+seaborn==0.9.0
 six==1.12.0
 SQLAlchemy==1.3.3
 typed-ast==1.3.5
 urllib3==1.24.2
 Werkzeug==0.15.2
 wrapt==1.11.1
-boto3==1.9.134
-numpy==1.16.3
-pandas==0.24.2
-PyMySQL==0.9.3
-typed-ast==1.3.5
